[metadata]
name = nanoset
version = 0.1.0
author = Martin Larralde
author-email = martin.larralde@embl.de
home-page = https://github.com/althonos/nanoset.py
description = Optimized wrapper for sets likely to be empty.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = 
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Rust
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
test_suite = tests
python_requires = >= 3.5.*
setup_requires =
    setuptools
    setuptools-rust

[bdist_wheel]
universal = false

[check]
metadata = true
restructuredtext = false
strict = true

[build_rust]
release = true
