[metadata]
name = nanoset
version = 0.1.4
author = Martin Larralde
author-email = martin.larralde@embl.de
home-page = https://github.com/althonos/nanoset.py
description = A memory-optimized wrapper for Python sets likely to be empty.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
keywords = Python, set, memory, wrapper, optimisation
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Rust
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
test_suite = tests
python_requires = >= 3.5.*
setup_requires =
    setuptools
    setuptools-rust
    wheel

[bdist_wheel]
universal = false

[check]
metadata = true
restructuredtext = false
strict = true

[build_rust]
release = true

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
processes = 1
